--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -1,3 +1,18 @@
 {
-    "Account": "Tài Khoản"
+  "Account": "Account",
+  "my-profile": "Hồ sơ của tôi",
+  "Email": "Email",
+  "enter_your_email": "Nhập email của bạn",
+  "Role": "Nhóm vai trò",
+  "enter_your_role": "Chọn vai trò của bạn",
+  "Full_Name": "Họ và tên",
+  "enter_your_full_name": "Nhập Họ và tên của bạn",
+  "Phone_Number": "Số điện thoại",
+  "enter_your_phone_number": "Nhập số điện thoại của bạn",
+  "Address": "Địa chỉ",
+  "enter_your_address": "Nhập địa chỉ của bạn",
+  "City": "Thành phố",
+  "enter_your_city": "nhập thành phố của bạn",
+  "upload_image": "Tải ảnh lên",
+  "Change": "Thay đổi"
 }
