--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -1,5 +1,5 @@
 {
-  "Account": "Account",
+  "Account": "Tài Khoản",
   "my-profile": "Hồ sơ của tôi",
   "Email": "Email",
   "enter_your_email": "Nhập email của bạn",
