--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -1,18 +1,24 @@
 {
   "Account": "Tài Khoản",
   "my-profile": "Hồ sơ của tôi",
-  "Email": "Email",
+  "email": "Email",
   "enter_your_email": "Nhập email của bạn",
-  "Role": "Nhóm vai trò",
+  "role": "Nhóm vai trò",
   "enter_your_role": "Chọn vai trò của bạn",
-  "Full_Name": "Họ và tên",
+  "full_name": "Họ và tên",
   "enter_your_full_name": "Nhập Họ và tên của bạn",
-  "Phone_Number": "Số điện thoại",
+  "phone_number": "Số điện thoại",
   "enter_your_phone_number": "Nhập số điện thoại của bạn",
-  "Address": "Địa chỉ",
+  "address": "Địa chỉ",
   "enter_your_address": "Nhập địa chỉ của bạn",
-  "City": "Thành phố",
+  "city": "Thành phố",
   "enter_your_city": "nhập thành phố của bạn",
-  "upload_image": "Tải ảnh lên",
-  "Change": "Thay đổi"
+  "upload-image": "Tải ảnh lên",
+  "Change": "Thay đổi",
+  "sign-in": "Đăng Nhập",
+  "password": "Mật khẩu",
+  "change-password": "Đổi mật khẩu",
+  "new-password": "Mật khẩu mới",
+  "confirm-new-password": "Xác nhận mật khẩu mới",
+  "change-password": "Thay đổi mật khẩu"
 }
