custom select and edit UI my profile

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,23 +1,22 @@
 {
   "Account": "Account",
+  "password": "Password",
   "my-profile": "My profile",
   "sign-in": "Sign in",
+  "full_name": "Full name",
+  "address": "Address",
+  "city": "City",
+  "role": "Role",
+  "phone_number": "Phone number",
+  "new-password": "New password",
+  "change": "Change",
   "change-password": "Change password",
   "enter_your_email": "Enter your email",
-  "enter_your_role": "Enter your role",
-  "role": "Role",
-  "full_name": "Full name",
+  "choose_your_role": "Choose your role",
   "enter_your_full_name": "Enter your full name",
-  "phone_number": "Phone number",
   "enter_your_phone_number": "Enter your phone number",
-  "address": "Address",
   "enter_your_address": "Enter your address",
-  "city": "City",
-  "enter_your_city": "Enter your city",
-  "change": "Change",
   "upload-image": "Upload image",
-  "password": "Password",
-  "new-password": "New password",
-  "confirm-new-password": "Confirm new password",
-  "change-password": "Change password"
+  "choose_your_city": "Choose your city",
+  "confirm-new-password": "Confirm new password"
 }
