--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -1,24 +1,23 @@
 {
   "Account": "Tài Khoản",
-  "my-profile": "Hồ sơ của tôi",
   "email": "Email",
-  "enter_your_email": "Nhập email của bạn",
-  "role": "Nhóm vai trò",
-  "enter_your_role": "Chọn vai trò của bạn",
-  "full_name": "Họ và tên",
-  "enter_your_full_name": "Nhập Họ và tên của bạn",
-  "phone_number": "Số điện thoại",
-  "enter_your_phone_number": "Nhập số điện thoại của bạn",
-  "address": "Địa chỉ",
-  "enter_your_address": "Nhập địa chỉ của bạn",
-  "city": "Thành phố",
-  "enter_your_city": "nhập thành phố của bạn",
-  "upload-image": "Tải ảnh lên",
-  "Change": "Thay đổi",
   "sign-in": "Đăng Nhập",
   "password": "Mật khẩu",
+  "confirm-new-password": "Xác nhận mật khẩu mới",
   "change-password": "Đổi mật khẩu",
   "new-password": "Mật khẩu mới",
-  "confirm-new-password": "Xác nhận mật khẩu mới",
-  "change-password": "Thay đổi mật khẩu"
+  "my-profile": "Hồ sơ của tôi",
+  "role": "Nhóm vai trò",
+  "full_name": "Họ và tên",
+  "phone_number": "Số điện thoại",
+  "city": "Thành phố",
+  "address": "Địa chỉ",
+  "Change": "Thay đổi",
+  "upload-image": "Tải ảnh lên",
+  "enter_your_email": "Nhập email của bạn",
+  "choose_your_role": "Chọn vai trò của bạn",
+  "enter_your_full_name": "Nhập Họ và tên của bạn",
+  "enter_your_phone_number": "Nhập số điện thoại của bạn",
+  "enter_your_address": "Nhập địa chỉ của bạn",
+  "choose_your_city": "nhập thành phố của bạn"
 }
