Ui manage system

--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -19,5 +19,5 @@
   "enter_your_full_name": "Nhập Họ và tên của bạn",
   "enter_your_phone_number": "Nhập số điện thoại của bạn",
   "enter_your_address": "Nhập địa chỉ của bạn",
-  "choose_your_city": "nhập thành phố của bạn"
+  "choose_your_city": "Nhập thành phố của bạn"
 }
