--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -18,5 +18,6 @@
   "enter_your_address": "Enter your address",
   "upload-image": "Upload image",
   "choose_your_city": "Choose your city",
-  "confirm-new-password": "Confirm new password"
+  "confirm-new-password": "Confirm new password",
+  "manege-system": "Manage system"
 }
