improve message editcreate

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,6 +3,8 @@
   "password": "Password",
   "my-profile": "My profile",
   "sign-in": "Sign in",
+  "sign-up": "Sign up",
+  "register": "Register",
   "full_name": "Full name",
   "address": "Address",
   "city": "City",
@@ -18,6 +20,33 @@
   "enter_your_address": "Enter your address",
   "upload-image": "Upload image",
   "choose_your_city": "Choose your city",
+  "confirm-password": "Confirm password",
   "confirm-new-password": "Confirm new password",
-  "manege-system": "Manage system"
+  "manage-system": "Manage system",
+  "manage-product": "Manage product",
+  "system": "System",
+  "user": "User",
+  "list-product": "List product",
+  "category-product": "Category product",
+  "list-order": "List order",
+  "list-review": "List review",
+  "setting": "Setting",
+  "setting-city": "Setting city",
+  "method-delivery": "Method delivery",
+  "method-payment": "Method payment",
+  "name": "NAME",
+  "action": "ACTION",
+  "remember-me": "Remember me",
+  "forget-password": "Forget password",
+  "dont-have-an-account?": "Don't have an account ?",
+  "log-in": "Log in",
+  "log-out": "Log out",
+  "or": "Or",
+  "create": "Create",
+  "update": "update",
+  "create-role-error": "Create role error",
+  "update-role-error": "Update role error",
+  "create-role-success": "Create role update",
+  "update-role-success": "Update role update",
+  "data-existed-in-system": "Data existed in system"
 }
