--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -2,7 +2,10 @@
   "Account": "Tài Khoản",
   "email": "Email",
   "sign-in": "Đăng Nhập",
+  "sign-up": "Đăng Kí",
   "password": "Mật khẩu",
+  "register": "Đăng kí",
+  "confirm-password": "Xác nhận mật khẩu",
   "confirm-new-password": "Xác nhận mật khẩu mới",
   "change-password": "Đổi mật khẩu",
   "new-password": "Mật khẩu mới",
@@ -20,5 +23,31 @@
   "enter_your_phone_number": "Nhập số điện thoại của bạn",
   "enter_your_address": "Nhập địa chỉ của bạn",
   "choose_your_city": "Nhập thành phố của bạn",
-  "manage-system": "Quản trị hệ thống"
+  "manage-system": "Quản trị hệ thống",
+  "manage-product": "Quản lí sản phẩm",
+  "system": "Hệ thống",
+  "user": "Người dùng",
+  "list-product": "Danh sách sản phẩm",
+  "category-product": "Danh mục sản phẩm",
+  "list-order": "Danh sách đơn hàng",
+  "list-review": "Danh sách đánh giá",
+  "setting": "Cài đặt",
+  "setting-city": "Cài đặt thành phố",
+  "method-delivery": "Phương thức giao hàng",
+  "method-payment": "Phương thức thanh toán",
+  "name": "TÊN",
+  "action": "HOẠT ĐỘNG",
+  "remember-me": "Ghi nhớ tôi",
+  "forget-password": "Quên mật khẩu",
+  "dont-have-an-account?": "Bạn có tài khoản không ?",
+  "log-in": "Đăng nhập",
+  "log-out": "Đăng xuất",
+  "or": "Hoặc",
+  "create": "Tạo",
+  "update": "Cập nhật",
+  "create-role-error": "Tạo nhóm  vai trò thất bại",
+  "update-role-error": "Cập nhật nhóm vai trò thất bại",
+  "create-role-success": "Tạo nhóm  vai trò Thành công",
+  "update-role-success": "Cập nhật nhóm  vai trò Thành công",
+  "data-existed-in-system": "Dữ liệu đã có trong hệ thống"
 }
