--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -24,7 +24,7 @@
   "enter_your_address": "Nhập địa chỉ của bạn",
   "choose_your_city": "Nhập thành phố của bạn",
   "manage-system": "Quản trị hệ thống",
-  "manage-product": "Quản lí sản phẩm",
+  "manage-product": "Quản trị sản phẩm",
   "system": "Hệ thống",
   "user": "Người dùng",
   "list-product": "Danh sách sản phẩm",
@@ -36,6 +36,7 @@
   "method-delivery": "Phương thức giao hàng",
   "method-payment": "Phương thức thanh toán",
   "name": "TÊN",
+  "name-role": "Tên nhóm vai trò",
   "action": "HOẠT ĐỘNG",
   "remember-me": "Ghi nhớ tôi",
   "forget-password": "Quên mật khẩu",
@@ -45,9 +46,18 @@
   "or": "Hoặc",
   "create": "Tạo",
   "update": "Cập nhật",
+  "delete": "Xoá",
+  "create-role": "Tạo nhóm vai trò",
   "create-role-error": "Tạo nhóm  vai trò thất bại",
   "update-role-error": "Cập nhật nhóm vai trò thất bại",
   "create-role-success": "Tạo nhóm  vai trò Thành công",
   "update-role-success": "Cập nhật nhóm  vai trò Thành công",
-  "data-existed-in-system": "Dữ liệu đã có trong hệ thống"
+  "data-existed-in-system": "Dữ liệu đã có trong hệ thống",
+  "manage-order": "Quản trị đơn hàng",
+  "product": "Sản phẩm",
+  "product-type": "Kiểu sản phẩm",
+  "review": "Đánh giá",
+  "order": "Đặt hàng",
+  "payment-type": "Kiểu thanh toán",
+  "delivery-type": "Kiểu giao hàng"
 }
