--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -21,6 +21,7 @@
   "Login_success": "Đăng nhập thành công",
   "Manage_system": "Quản trị hệ thống",
   "Name": "Tên",
+  "Rows_selected": "Hàng đã chọn",
   "Actions": "Thao tác",
   "Create": "Tạo",
   "Edit": "Sửa",
