--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -87,6 +87,7 @@
   "Block": "Blocked",
   "Rows_selected": "Rows selected",
   "Create_user_success": "User created successfully",
+  "Update_user_success": "User updated successfully",
   "Create_user_error": "User creation failed",
   "Update_user_error": "User update failed",
   "Delete_user_success": "User deleted successfully",
