--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -329,5 +329,6 @@
   "Payment_vn_pay_failed": "Payment VNPay failed",
   "ratings": "ratings",
   "comments": "comments",
-  "Product_details": "Details product"
+  "Product_details": "Details product",
+  "Delivery_address": "Delivery address"
 }
