--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -356,5 +356,6 @@
   "ratings": "đánh giá",
   "comments": "bình luận",
   "Product_details": "Chi tiết sản phẩm",
-  "Delivery_address": "Địa chỉ giao hàng"
+  "Delivery_address": "Địa chỉ giao hàng",
+  "Out_in_stock": "Hết hàng"
 }
