--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -20,6 +20,7 @@
   "The_email_or_password_wrong": "Email hoặc mật khẩu không chính xác",
   "Login_success": "Đăng nhập thành công",
   "Manage_system": "Quản trị hệ thống",
+  "Update_order_product": "Cập nhật đơn hàng sản phẩm",
   "Name": "Tên",
   "Rows_selected": "Hàng đã chọn",
   "Actions": "Thao tác",
