done manage review

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -150,6 +150,23 @@
   "Create_payment_type": "Create payment method",
   "Name_payment_type": "Payment method name",
   "Enter_name_payment_type": "Enter payment method name",
+
+  "Create_reviews_success": "Reviews created successfully",
+  "Update_reviews_success": "Reviews updated successfully",
+  "Create_reviews_error": "Reviews creation failed",
+  "Update_reviews_error": "Reviews update failed",
+  "Delete_multiple_reviews_success": "Multiple Reviewss deleted successfully",
+  "Delete_multiple_reviews_error": "Multiple Reviewss deletion failed",
+  "Delete_reviews_success": "Reviews deleted successfully",
+  "Delete_reviews_error": "Reviews deletion failed",
+  "Title_delete_multiple_reviews": "Confirm delete multiple Reviewss",
+  "Confirm_delete_multiple_reviews": "Are you sure you want to delete these Reviewss?",
+  "Title_delete_reviews": "Confirm delete Reviews",
+  "Confirm_delete_reviews": "Are you sure you want to delete this Reviews?",
+  "Edit_reviews": "Edit Reviews",
+  "Create_reviews": "Create Reviews",
+  "Name_reviews": "Reviews name",
+  "Enter_name_reviews": "Enter Reviews name",
   "Payment_later_type": "Payment later type",
   "Vn_pay_type": "Vn pay type",
   "Paypal_type": "Paypal type",
@@ -177,6 +194,7 @@
   "Name_product_type": "Product type name",
   "Enter_name_product_type": "Enter product type name",
   "Enter_slug": "Enter slug",
+  "Enter_star": "Enter star",
   "Slug": "Slug",
   "Create_product_success": "Product created successfully",
   "Update_product_success": "Product updated successfully",
