--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -182,8 +182,8 @@
   "Name_product_type": "Tên loại sản phẩm",
   "Enter_name_product_type": "Nhập tên loại sản phẩm",
   "Enter_slug": "Nhập slug",
+  "Enter_star": "Nhập số sao",
   "Slug": "Slug",
-
   "Create_product_success": "Tạo sản phẩm thành công",
   "Update_product_success": "Cập nhật sản phẩm thành công",
   "Create_product_error": "Tạo sản phẩm thất bại",
@@ -203,6 +203,23 @@
   "Change_image_product": "Thay đổi ảnh sản phẩm",
   "Upload_image_product": "Tải ảnh sản phẩm",
   "Status_product": "Trạng thái sản phẩm",
+
+  "Create_reviews_success": "Tạo đánh giá thanh toán thành công",
+  "Update_reviews_success": "Cập nhật đánh giá thanh toán thành công",
+  "Create_reviews_error": "Tạo đánh giá thanh toán thất bại",
+  "Update_reviews_error": "Cập nhật đánh giá thanh toán thất bại",
+  "Delete_multiple_reviews_success": "Xóa nhiều đánh giá thanh toán thành công",
+  "Delete_multiple_reviews_error": "Xóa nhiều đánh giá thanh toán thất bại",
+  "Delete_reviews_success": "Xóa đánh giá thanh toán thành công",
+  "Delete_reviews_error": "Xóa đánh giá thanh toán thất bại",
+  "Title_delete_multiple_reviews": "Xác nhận xóa nhiều đánh giá thanh toán",
+  "Confirm_delete_multiple_reviews": "Bạn có chắc xóa những đánh giá thanh toán này?",
+  "Title_delete_reviews": "Xác nhận xóa đánh giá thanh toán",
+  "Confirm_delete_reviews": "Bạn có chắc xóa đánh giá thanh toán này?",
+  "Edit_reviews": "Chỉnh sửa đánh giá thanh toán",
+  "Create_reviews": "Thêm đánh giá thanh toán",
+  "Name_reviews": "Tên đánh giá thanh toán",
+  "Enter_name_reviews": "Nhập tên đánh giá thanh toán",
 
   "Count_in_stock": "Số lượng sản phẩm trong kho",
   "Price": "Giá",
