done manage comment

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -320,8 +320,11 @@
   "Sort_best_sold": "Sort by best-selling",
   "Sort_by": "Sort by",
   "Comment": "Comment",
+  "Edit_comment": "Edit comment",
   "Title_delete_comment": "Confirm delete comment",
   "Confirm_delete_comment": "Confirm delete comment",
+  "Title_delete_multiple_comments": "Confirm delete multiple comment",
+  "Confirm_delete_multiple_comments": "Confirm delete multiple comment",
   "Update_comment_success": "Comment updated successfully",
   "Update_comment_error": "Failed to update comment",
   "Delete_comment_success": "Comment deleted successfully",
