--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -345,8 +345,11 @@
   "Sort_best_sold": "Bán chạy nhất",
   "Sort_by": "Sắp xếp theo",
   "Comment": "Bình luận",
+  "Edit_comment": "Chỉnh sửa bình luận",
   "Title_delete_comment": "Xác nhận xóa bình luận",
   "Confirm_delete_comment": "Xác nhận xóa bình luận",
+  "Title_delete_multiple_comments": "Xác nhận xóa nhiều bình luận",
+  "Confirm_delete_multiple_comments": "Xác nhận xóa nhiều bình luận",
   "Update_comment_success": "Cập nhật bình luận thành công",
   "Update_comment_error": "Cập nhật bình luận thất bại",
   "Delete_comment_success": "Xóa bình luận thành công",
