report product status

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -357,5 +357,6 @@
   "Product_details": "Details product",
   "Delivery_address": "Delivery address",
   "Out_in_stock": "Out in stock",
-  "Enter_content": "Enter content"
+  "Enter_content": "Enter content",
+  "User_Type": "User type"
 }
