--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -382,5 +382,6 @@
   "Product_details": "Chi tiết sản phẩm",
   "Delivery_address": "Địa chỉ giao hàng",
   "Out_in_stock": "Hết hàng",
-  "Enter_content": "Nhập bình luận"
+  "Enter_content": "Nhập bình luận",
+  "User_Type": "Loại người dùng"
 }
