--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -23,6 +23,7 @@
   "Name": "Name",
   "Actions": "Actions",
   "Create": "Create",
+  "Create_order": "Create order",
   "Edit": "Edit",
   "Delete": "Delete",
   "Required_field": "This field is required",
@@ -348,6 +349,7 @@
   "Delete_notification_failed": "Delete notification failed",
   "Marked_notification_failed": "Marked notification failed",
   "Marked_notification_success": "Marked notification success",
+  "Mark_read_all_notification": "Marked read all notification",
   "Unread": "Unread",
   "Read": "Read",
   "Payment_vn_pay_success": "Payment VNPay success",
