--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -17,12 +17,14 @@
   "Update": "Cập nhật",
   "Logout": "Đăng xuất",
   "Change_password": "Thay đổi mật khẩu",
+  "Create_order": "Tạo đơn hàng",
   "The_email_or_password_wrong": "Email hoặc mật khẩu không chính xác",
   "Login_success": "Đăng nhập thành công",
   "Manage_system": "Quản trị hệ thống",
   "Update_order_product": "Cập nhật đơn hàng sản phẩm",
   "Name": "Tên",
   "Rows_selected": "Hàng đã chọn",
+  "Mark_read_all_notification": "Đánh dấu đọc tất cả thông báo",
   "Actions": "Thao tác",
   "Create": "Tạo",
   "Edit": "Sửa",
