fix page payment

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -199,8 +199,10 @@
   "Slug": "Slug",
   "Create_product_success": "Product created successfully",
   "Update_product_success": "Product updated successfully",
-  "Create_product_error": "Product creation failed",
+  "Update_status_order_error": "Status order update failed",
+  "Update_status_order_success": "Status order updated successfully",
   "Update_product_error": "Product update failed",
+  "Create_product_error": "Product creation failed",
   "Delete_multiple_product_success": "Multiple products deleted successfully",
   "Delete_multiple_product_error": "Multiple products deletion failed",
   "Delete_product_success": "Product deleted successfully",
