--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -16,6 +16,8 @@
   "Change_avatar": "Thay đổi ảnh đại diện",
   "Update": "Cập nhật",
   "Logout": "Đăng xuất",
+  "Update_status_order_error": "Cập nhật trạng thái order thất bại",
+  "Update_status_order_success": "Cập nhật trạng thái order thành công",
   "Change_password": "Thay đổi mật khẩu",
   "Create_order": "Tạo đơn hàng",
   "The_email_or_password_wrong": "Email hoặc mật khẩu không chính xác",
@@ -81,7 +83,7 @@
   "Delete_role_success": "Xóa nhóm vai trò thành công",
   "Manage_order": "Quản trị đơn hàng",
   "Review": "Đánh giá",
-  "Order": "Đơn hàng",
+  "Order": "Đặt đơn hàng",
   "Delivery_type": "Phương thức giao hàng",
   "Payment_type": "Phương thức thanh toán",
   "Product": "Sản phẩm",
