--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -16,6 +16,8 @@
   "Change_avatar": "Thay đổi ảnh đại diện",
   "Update": "Cập nhật",
   "Logout": "Đăng xuất",
+  "Sign-up": "Đăng kí",
+  "Sign-in": "Đăng nhập",
   "Update_status_order_error": "Cập nhật trạng thái order thất bại",
   "Update_status_order_success": "Cập nhật trạng thái order thành công",
   "Change_password": "Thay đổi mật khẩu",
@@ -63,6 +65,7 @@
   "Enter_confirm_password": "Nhập lại mật khẩu",
   "You_have_account": "Bạn đã có tài khoản?",
   "Remember_me": "Nhớ mật khẩu",
+  "Mark_read": "Đánh dấu đã đọc",
   "Login": "Đăng nhập",
   "Forgot_password": "Quên mật khẩu",
   "Register": "Đăng ký",
