--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -197,6 +197,8 @@
   "Enter_slug": "Enter slug",
   "Enter_star": "Enter star",
   "Slug": "Slug",
+  "Sign-up": "Sign up",
+  "Sign-in": "Sign in",
   "Create_product_success": "Product created successfully",
   "Update_product_success": "Product updated successfully",
   "Update_status_order_error": "Status order update failed",
@@ -213,6 +215,7 @@
   "Confirm_delete_product": "Are you sure you want to delete this product?",
   "Edit_product": "Edit product",
   "Create_product": "Create product",
+  "Mark_read": "Mark read",
   "Name_product": "Product name",
   "Enter_name_product": "Enter product name",
   "Change_image_product": "Change product image",
