--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,12 +14,15 @@
   "Enter_your_address": "Enter your address",
   "Upload_avatar": "Upload avatar",
   "Change_avatar": "Change avatar",
+  "Sign_in": "Sign in",
+  "Sign_up": "Sign up",
   "Update": "Update",
   "Logout": "Logout",
   "Change_password": "Change password",
   "The_email_or_password_wrong": "Email or password is incorrect",
   "Login_success": "Login successful",
   "Manage_system": "System Management",
+  "countInStock": "Count in stock",
   "Name": "Name",
   "Actions": "Actions",
   "Create": "Create",
