--- a/public/locales/vi.json
+++ b/public/locales/vi.json
@@ -15,6 +15,9 @@
   "Upload_avatar": "Tải ảnh đại diện",
   "Change_avatar": "Thay đổi ảnh đại diện",
   "Update": "Cập nhật",
+  "countInStock": "Hàng tồn kho",
+  "Sign_in": "Đăng nhập",
+  "Sign_up": "Đăng kí",
   "Logout": "Đăng xuất",
   "Update_status_order_error": "Cập nhật trạng thái order thất bại",
   "Update_status_order_success": "Cập nhật trạng thái order thành công",
